# rubynews_flask

./: .hintrc  Pipfile  README.md  main.py  pyproject.toml  run_app
routes/index/: __init__.py  index.py
routes/index/static/css/: stile.css
routes/index/static/js/: add_news.js
routes/index/templates/: index.html
routes/news/: __init__.py  news.py  tools.py
routes/news/db/: news.json
routes/news/static/js/: app.js
routes/news/templates/: add_news.html  news.html
